<resources>
    <string name="app_name">Ogara</string>
    <string name="bakery">Bakery</string>
    <string name="breakfast">Breakfast</string>
    <string name="burgers_and_sandwiches">Burgers and Sandwiches</string>
    <string name="chats">Chats</string>
    <string name="chinese">Chinese</string>
    <string name="cold_beverages">Cold Beverages</string>
    <string name="dosa">Dosa</string>
    <string name="hot_beverages">Hot Beverages</string>
    <string name="lunch">Lunch</string>
    <string name="maggi">Maggi</string>
    <string name="momos">Momos</string>
    <string name="rolls">Rolls</string>
    <string name="tasty_buds">Tasty Buds</string>
</resources>
